@@ -1,4 +1,4 @@
-    $(function() {
+$(function() {
 
     function initSelect2(widget){
         var config = widget.data("select2config");
@@ -10,7 +10,25 @@
           }
         };
 
-        $(widget).select2(config);
+        // Special template to indicate new terms
+        config.templateResult = function (data) {
+          if (!data._resultId) {
+            // Since this is hacked into a pt, we cannot use html tags :-(
+            return $(document.createElement('span'))
+              .text(data.text)
+              .addClass('newTag')
+              .add($(document.createElement('span')).addClass('newTagHint').text('neu'));
+          } else {
+            return data.text;  
+          }
+        }
+
+        $(widget).select2(config).on('change', function(event){
+            var newTermsField = $(this).parent().find('[id$="_new"]')
+            var newTerms = $(this).find('[data-select2-tag="true"]');
+            var newTermsText = $.map(newTerms, function(val, i){ return val.value; });
+            newTermsField.val(newTermsText.join('\n'));
+        }).parent().addClass(config.tags ? 'select2tags' : '');
     }
 
     window.ftwKeywordWidgetInitSelect2 = initSelect2;
