@@ -99,9 +99,12 @@ class KeywordWidget(SelectWidget):
             'noResultFound': translate(self.promptNoresultFound,
                                        context=self.request),
             'width': '300px',
-            'allowClear': not self.field.required and not self.multiple,
-            # 'tags': self.show_add_term_field()
+            'allowClear': not self.field.required and not self.multiple,            
         }
+
+        if self.show_add_term_field():
+            default_config['tags'] = True
+            default_config['tokenSeparators'] = [',']
 
         if self.js_config:
             default_config.update(self.js_config)
@@ -151,7 +154,11 @@ class KeywordWidget(SelectWidget):
             if values is default:
                 values = []
             else:
-                values = list(values)
+                # We need to remove the new added keywords from extracted
+                # values, since they need to be processed separately.
+                # This happens if the select2 plugin has the tag option
+                # activated
+                values = [val for val in values if val not in new_values]
 
             for new_value in new_values:
                 # The new values needs to fit the token value in the
@@ -173,7 +180,7 @@ class KeywordWidget(SelectWidget):
 
                 # Vocabulary term tokens *must* be 7 bit values, titles *must*
                 # be unicode.
-                # Value needs to be a utf-8 str, hell I don't know why.
+                # Value needs to be a utf-8 str, only hell knows why.
                 # IMHO this should depend on the source. We're gonna have
                 # trouble with this in the future.
                 new_token = new_value
